Fix home page spacing

--- a/src/components/App/_App.scss
+++ b/src/components/App/_App.scss
@@ -95,8 +95,8 @@ button:hover,
   margin: 2rem;
 }
 
-@media screen and (min-width: 1400px) {
-  .main__wrapper {
-    width: 1400px
-  }
-}
+// @media screen and (min-width: 1400px) {
+//   .main__wrapper {
+//     width: 1400px
+//   }
+// }
