--- a/src/components/Home/_Home.scss
+++ b/src/components/Home/_Home.scss
@@ -2,6 +2,7 @@
 @use '../../styles/mixins' as *;
 
 .hero {
+  height: 100%;
   width: 100%;
   display: flex;
 }
@@ -88,9 +89,11 @@
     width: 100%;
   }
   .hero__text-wrapper {
-    background-color: #F5F5F590;
+    background-color: #f5f5f5d6;
     width: 100%;
-    height: 100%;
+    padding: 1rem;
+    // height: 100%;
+    @include true-center;
   }
 }
 
