--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -170,11 +170,6 @@ button:hover,
   margin: 2rem;
 }
 
-@media screen and (min-width: 1400px) {
-  .main__wrapper {
-    width: 1400px;
-  }
-}
 .contact {
   display: flex;
   flex-direction: column;
@@ -226,6 +221,7 @@ button:hover,
   }
 }
 .hero {
+  height: 100%;
   width: 100%;
   display: flex;
 }
@@ -315,9 +311,12 @@ button:hover,
     width: 100%;
   }
   .hero__text-wrapper {
-    background-color: rgba(245, 245, 245, 0.5647058824);
+    background-color: rgba(245, 245, 245, 0.8392156863);
     width: 100%;
-    height: 100%;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 @media screen and (max-width: 500px) {
